--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+.card {
+    height: 450px;
+    width: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    margin: 30px;
+    display: inline-block;   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-image {
+    width: 350px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.description {
+    padding-left: 25px;
+    padding-right: 25px;
+    font-weight: 100;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-container {
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.banner {
+    width: 100%;
+    margin-bottom: 25px;
+    position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+    margin-top: 50px;
+    margin-bottom: 25px;
+    text-align: center;
+    font-weight: 300;
+    font-size: medium;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: xxx-large;
+    font-weight: 300;
+    color: white;
+}
+
+.navbar {
+    height: 75px;
+    display: inline-flex;
+    font-size: large;
+    font-weight: 400;
+    text-align: right;
+}
+
+.title {
+    font-size: large;
+    font-weight: 400;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.button {
+    margin: 0;
+    text-align: left;
 }
