--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,32 @@
 /* Navbar styling */
 .navbar {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
     height: 75px;
-    font-size: large;
+    font-size: 1.2em;
     font-weight: 400;
 }
 
 .tree-icon {
+    grid-row: 1;
+    grid-column: 1;
     height: 65px;
     width: 65px;
-    display: inline-block;
-    padding: 6px 0 0 8px;
+    align-self: center;
+    padding: 0 0 0 10px;
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    float: right;
+    align-self: center;
+    justify-self: end;
 }
 
 li {
-    padding: 25px 50px 0 0;
-    text-align: right;
     display: inline-block;
+    padding: 0 25px 0 0;
 }
 
 /* Card styling */
@@ -56,18 +60,35 @@ li {
 
 /* Banner styling */
 .banner {
+    display: grid;
+    grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+    height: calc(100vh - 75px);
+    place-items: center;
+}
+
+#banner-image {
+    grid-row: 1 / 11;
+    grid-column: 1 / 11;
+    object-fit: cover;
+    height: 100%;
     width: 100%;
+
+}
+
+#banner-text {
+    grid-row: 1 / 11;
+    grid-column: 2 / 10;
+    color: white;
     position: relative;
 }
 
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 3em;
-    font-weight: 400;
-    color: white;
+#title {
+    font-size: 5em;
+    font-weight: 600;
+}
+
+#sub-title {
+    font-size: 2em;
 }
 
 /* Footer styling */
