--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,6 @@
 }
 
 .tree-icon {
-    grid-row: 1;
-    grid-column: 1;
     height: 65px;
     width: 65px;
     align-self: center;
@@ -27,35 +25,6 @@ ul {
 li {
     display: inline-block;
     padding: 0 25px 0 0;
-}
-
-/* Card styling */
-.card-container {
-    text-align: center;
-}
-
-.card {
-    height: 450px;
-    width: 350px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align: center;
-    margin: 50px 40px 0 0;
-    display: inline-block;
-}
-
-.card-image {
-    width: 350px;
-}
-
-.title {
-    font-size: large;
-    font-weight: 400;
-    margin: 15px 0 15px 0;
-}
-
-.description {
-    padding: 0 25px 0 25px;
-    font-weight: 100;
 }
 
 /* Banner styling */
@@ -91,10 +60,109 @@ li {
     font-size: 2em;
 }
 
+/* Card styling */
+.card-container {
+    display: grid;
+    grid-template: repeat(3, auto) / 0.2fr repeat(5, auto) 0.2fr;
+    margin-top: 50px;
+    justify-items: center;
+}
+
+.card {
+    height: 450px;
+    width: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
+.card-image {
+    width: 350px;
+}
+
+.title {
+    font-size: 1.2em;
+    font-weight: 400;
+    margin: 15px 0 15px 0;
+}
+
+.description {
+    padding: 0 25px 0 25px;
+    font-size: 1em;
+    font-weight: 100;
+}
+
+#one {
+    grid-column: 2;
+}
+
+#two {
+    grid-column: 4;
+}
+
+#three {
+    grid-column: 6;
+}
+
 /* Footer styling */
 .footer {
     margin: 50px 0 25px 0;
     text-align: center;
     font-weight: 300;
-    font-size: medium;
+    font-size: 1em;
+}
+
+@media only screen and (max-width: 1280px) {
+    #one {
+        grid-row: 1;
+        grid-column: 2 / 6;
+    }
+
+    #two {
+        grid-row: 2;
+        grid-column: 2 / 6;
+    }
+
+    #three {
+        grid-row: 3;
+        grid-column: 2 / 6;
+    }
+
+    #one, 
+    #two {
+        margin-bottom: 50px;
+    }
+
+    #one,
+    #two,
+    #three {
+        display: grid;
+        grid-template: 1fr 2fr / 1fr 1fr;
+        width: 80%;
+    }
+
+    #image-1280 {
+        grid-row: 1 / 3;
+    }
+
+    #title-1280 {
+        grid-column: 2;
+        font-size: 1.8em;
+        place-self: center;
+    }
+
+    .description {
+        grid-row: 2;
+        grid-column: 2;
+        font-size: 1.4em;
+    }
+
+    .card {
+        text-align: left;
+    }
+
+    .card-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
